# AutSys_Labs_Testframework

./: README.md
Assignment_1/testframework/: CMakeLists.txt
Assignment_1/testframework/launch/: test.launch
Assignment_1/testframework/src/: twoDrones_test.cpp
Assignment_1/testing/: CMakeLists.txt  autograding.json  build_script.sh  run_script.sh  testing.cpp
Assignment_2/testframework/: CMakeLists.txt  package.xml
Assignment_2/testframework/launch/: test.launch
Assignment_2/testframework/src/: controller_test.cpp
Assignment_2/testing/: autograding.json  build_script.sh  run_script.sh  testing.cpp
Assignment_3/testframework/: CMakeLists.txt  package.xml
Assignment_3/testframework/config/: referenceVertex.yaml
Assignment_3/testframework/include/: trajectory_test.h
Assignment_3/testframework/launch/: test.launch
Assignment_3/testframework/src/: trajectory_test.cpp
Assignment_3/testing/: autograding.json  build_script.sh  run_script.sh  testing.cpp
Assignment_4/testing/: autograding.json  test.py
