<?xml version="1.0"?>
<package>
  <name>testframework</name>
  <version>0.0.0</version>
  <description>The UAV controller package</description>
  <maintainer email="antonap@mit.edu">Pasquale Antonante</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>

  <export>
  </export>
</package>
